# case-change-machine-api

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose-elk.yaml  docker-compose-kafka.yaml  docker-compose-locust.yaml  docker-compose-single.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: static-checks.yaml
docker/filebeat/: filebeat.yml
docker/kibana/: coins-dashboard.ndjson  curl-create-dashboard.sh
grafana/dashboards/: services_dashboard.json
load-test/: README.md  locustfile.py
src/chg-package/: README.md  pyproject.toml
src/chg-package/change_machine_package/: __init__.py  algorithms.py  change_machine.py  currency.py  exceptions.py  logging.py  utils.py
src/chg-package/tests/: test_algorithms.py  test_change_machine.py  test_utils.py
src/chg-service/: README.md  pyproject.toml
src/chg-service/change_machine_service/: api.py  config.py  exceptions.py  logger.py  routers_v1.py  settings.py
src/chg-service/tests/unit/: conftest.py  test_app.py
