[tool.poetry]
name = "change-machine"
version = "0.1.0"
description = ""
authors = ["atemate"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
change-machine-package = {path = "src/chg-package", develop = true}
change-machine-service = {path = "src/chg-service", develop = true}

[tool.poetry.group.dev.dependencies]
pre-commit = "3.0.1"
pytest = "7.2.1"
locust = "2.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
