[tool.poetry]
name = "change-machine-package"
version = "0.1.0"
description = ""
authors = ["atemate"]
readme = "README.md"
packages = [{include = "change_machine_package"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
