[tool.poetry]
name = "change-machine-service"
version = "0.1.0"
description = ""
authors = ["Artem Yushkovskiy <artem.yushkovskiy@deliveryhero.com>"]
readme = "README.md"
packages = [{include = "change_machine_service"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.0"}


[tool.poetry.group.dev.dependencies]
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
